--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,6 +4,7 @@ import { siteConfig } from "../config";
 const hasProjects = siteConfig.projects && siteConfig.projects.length > 0;
 const hasExperience = siteConfig.experience && siteConfig.experience.length > 0;
 const hasEducation = siteConfig.education && siteConfig.education.length > 0;
+const hasPracticeAreas = siteConfig.practiceAreas && siteConfig.practiceAreas.length > 0;
 ---
 
 <header
@@ -52,6 +53,18 @@ const hasEducation = siteConfig.education && siteConfig.education.length > 0;
               class="text-gray-700 hover:text-black transition-colors font-medium"
             >
               Educacion
+            </a>
+          </li>
+        )
+      }
+      {
+        hasPracticeAreas && (
+          <li>
+            <a
+              href="#practice"
+              class="text-gray-700 hover:text-black transition-colors font-medium"
+            >
+              Áreas
             </a>
           </li>
         )
